src/baseml_compile.log
baseml_parra.c: In function 'AllocateThreadWorkspace':
baseml_parra.c:80:54: error: 'com' undeclared (first use in this function); did you mean 'cos'?
   80 |     thread_workspace = (double*)calloc(max_threads * com.ncode * tree.nnode, sizeof(double));
      |                                                      ^~~
      |                                                      cos
baseml_parra.c:80:54: note: each undeclared identifier is reported only once for each function it appears in
baseml_parra.c:80:66: error: 'tree' undeclared (first use in this function); did you mean 'free'?
   80 |     thread_workspace = (double*)calloc(max_threads * com.ncode * tree.nnode, sizeof(double));
      |                                                                  ^~~~
      |                                                                  free
baseml_parra.c: In function 'lfun':
baseml_parra.c:112:14: error: 'tree' undeclared (first use in this function); did you mean 'free'?
  112 |     for (i = tree.nnode - 1; i >= 0; i--) {
      |              ^~~~
      |              free
baseml_parra.c:113:13: error: 'nodes' undeclared (first use in this function)
  113 |         if (nodes[i].nson > 0) {
      |             ^~~~~
baseml_parra.c:122:21: error: 'com' undeclared (first use in this function); did you mean 'cos'?
  122 |     for (h = 0; h < com.npatt; h++) {
      |                     ^~~
      |                     cos
baseml_parra.c:138:13: error: break statement used with OpenMP for loop
  138 |             break;
      |             ^~~~~
baseml_parra.c:122:14: error: invalid controlling predicate
  122 |     for (h = 0; h < com.npatt; h++) {
      |              ^
baseml_parra.c: In function 'ConditionalPNode':
baseml_parra.c:149:20: error: 'nodes' undeclared (first use in this function)
  149 |     double *conP = nodes[inode].conP;
      |                    ^~~~~
baseml_parra.c:158:21: error: 'com' undeclared (first use in this function); did you mean 'cos'?
  158 |     for (h = 0; h < com.npatt; h++) {
      |                     ^~~
      |                     cos
baseml_parra.c:158:14: error: invalid controlling predicate
  158 |     for (h = 0; h < com.npatt; h++) {
      |              ^
baseml_parra.c: In function 'Statistics':
baseml_parra.c:198:9: error: 'com' undeclared (first use in this function); did you mean 'cos'?
  198 |     if (com.ngene <= 1) {
      |         ^~~
      |         cos
baseml_parra.c:211:18: error: invalid controlling predicate
  211 |     for (igene = 0; igene < com.ngene; igene++) {
      |                  ^
baseml_parra.c: In function 'GetPMatBranch':
baseml_parra.c:245:21: error: 'com' undeclared (first use in this function); did you mean 'cos'?
  245 |     double kappa = (com.model == 0) ? 1.0 : x[com.ntime];
      |                     ^~~
      |                     cos
baseml_parra.c:253:18: error: invalid controlling predicate
  253 |         for (i = 0; i < com.ncode; i++) {
      |                  ^
baseml_parra.c:268:14: error: invalid controlling predicate
  268 |     for (i = 0; i < com.ncode; i++) {
      |              ^
baseml_parra.c:278:14: error: invalid controlling predicate
  278 |     for (i = 0; i < com.ncode; i++) {
      |              ^
baseml_parra.c: In function 'DistanceMatML':
baseml_parra.c:299:29: error: 'com' undeclared (first use in this function); did you mean 'cos'?
  299 |     dmat = (double**)malloc(com.ns * sizeof(double*));
      |                             ^~~
      |                             cos
baseml_parra.c:317:13: error: implicit declaration of function 'CalculatePairwiseMLDistance' [-Wimplicit-function-declaration]
  317 |             CalculatePairwiseMLDistance(i, j, &distance, &variance, x, space);
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~
baseml_parra.c:312:14: error: invalid controlling predicate
  312 |     for (i = 0; i < com.ns; i++) {
      |              ^
baseml_parra.c: At top level:
baseml_parra.c:354:5: error: conflicting types for 'BootstrapSeq'; have 'int(FILE *, int,  double *)'
  354 | int BootstrapSeq(FILE *fout, int nboot, double space[])
      |     ^~~~~~~~~~~~
In file included from baseml_parra.c:13:
paml.h:181:5: note: previous declaration of 'BootstrapSeq' with type 'int(char *)'
  181 | int BootstrapSeq (char* seqfilename);
      |     ^~~~~~~~~~~~
baseml_parra.c: In function 'BootstrapSeq':
baseml_parra.c:357:35: error: 'com' undeclared (first use in this function); did you mean 'cos'?
  357 |     int *bootindex = (int*)malloc(com.ls * sizeof(int));
      |                                   ^~~
      |                                   cos
baseml_parra.c:379:9: error: implicit declaration of function 'CalculateBootstrapDistances' [-Wimplicit-function-declaration]
  379 |         CalculateBootstrapDistances(bootindex, boot_distances, space);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~
baseml_parra.c: In function 'GetOptions':
baseml_parra.c:400:18: error: implicit declaration of function 'gfopen'; did you mean 'fopen'? [-Wimplicit-function-declaration]
  400 |     FILE *fctl = gfopen(ctlf, "r");
      |                  ^~~~~~
      |                  fopen
baseml_parra.c:400:18: error: initialization of 'FILE *' from 'int' makes pointer from integer without a cast [-Wint-conversion]
baseml_parra.c:415:21: error: implicit declaration of function 'ReadItems' [-Wimplicit-function-declaration]
  415 |                 t = ReadItems(optstr[i], pline, &iopt);
      |                     ^~~~~~~~~
baseml_parra.c: In function 'main':
baseml_parra.c:453:19: error: 'com' undeclared (first use in this function); did you mean 'cos'?
  453 |     fout = gfopen(com.outf, "w");
      |                   ^~~
      |                   cos
